--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "@cartridge/connector": "^0.5.9",
     "@cartridge/controller": "^0.5.9",
     "@cartridge/ui-next": "^0.7.13",
-    "@dojoengine/core": "1.1.0",
-    "@dojoengine/create-burner": "1.1.0",
-    "@dojoengine/predeployed-connector": "1.1.0",
-    "@dojoengine/sdk": "1.1.0",
-    "@dojoengine/torii-client": "1.1.0",
-    "@dojoengine/torii-wasm": "1.1.0",
-    "@dojoengine/utils": "1.1.0",
+    "@dojoengine/core": "1.4.4",
+    "@dojoengine/create-burner": "1.4.4",
+    "@dojoengine/predeployed-connector": "1.4.4",
+    "@dojoengine/sdk": "1.4.4",
+    "@dojoengine/torii-client": "1.4.4",
+    "@dojoengine/torii-wasm": "1.4.4",
+    "@dojoengine/utils": "1.4.4",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -69,5 +69,10 @@
     "vite": "^5.4.7",
     "vite-plugin-mkcert": "^1.17.8"
   },
-  "packageManager": "pnpm@10.6.5"
+  "packageManager": "pnpm@10.6.5",
+  "pnpm": {
+    "overrides": {
+      "starknet": "6.24.1"
+    }
+  }
 }
